--- a/common/src/main/resources/assets/customcursor/lang/en_us.json
+++ b/common/src/main/resources/assets/customcursor/lang/en_us.json
@@ -4,7 +4,12 @@
   "customcursor.edit.x": "X offset",
   "customcursor.edit.y": "Y offset",
   "customcursor.edit.size": "Size",
+  "customcursor.edit.folder": "Select cursor from folder",
   "customcursor.edit.enabled.true": "Cursor: enabled",
   "customcursor.edit.enabled.false": "Cursor: disabled",
-  "customcursor.openbutton": "Edit cursor"
+  "customcursor.openbutton": "Edit cursor",
+  "customcursor.folder.openfolder": "Сursor folder",
+  "customcursor.folder.accept": "Confirm",
+  "customcursor.folder.cancel": "Cancel",
+  "customcursor.folder.selected": "Selected cursor texture"
 }
