--- a/common/src/main/resources/assets/customcursor/lang/uk_ua.json
+++ b/common/src/main/resources/assets/customcursor/lang/uk_ua.json
@@ -4,7 +4,12 @@
   "customcursor.edit.x": "Зсув по X",
   "customcursor.edit.y": "Зсув по Y",
   "customcursor.edit.size": "Розмір",
+  "customcursor.edit.folder": "Вибрати курсор",
   "customcursor.edit.enabled.true": "Курсор увімкнено",
   "customcursor.edit.enabled.false": "Курсор вимкнено",
-  "customcursor.openbutton": "Редагувати курсор"
+  "customcursor.openbutton": "Редагувати курсор",
+  "customcursor.folder.openfolder": "Папка курсорів",
+  "customcursor.folder.accept": "Підтвердити",
+  "customcursor.folder.cancel": "Відмінити",
+  "customcursor.folder.selected": "Вибрана текстура"
 }
